--- a/style.css
+++ b/style.css
@@ -6,16 +6,20 @@ h1{
     font-size: 50px;
     
 }
+h2{
+    font-size: 40px;
+}
 .orange-color{
     color: orange;
 }
-section{
+.flexiable-container{
     display: flex;
     margin-bottom: 100px;
 }
 .half-width{
     width: 50%;
     padding-left: 2%;
+    
 }
 .half-width img{
     width: 80%;
@@ -37,4 +41,33 @@ section{
     background-image:url(images/dream-bg.png) ;
     background-repeat: no-repeat;
     background-position: right;
+}
+.experiance-area{
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+}
+.experience-item{
+    
+    width: 40%;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding: 5% 5% 5% 5%;
+    border-left:10px solid;
+    border-radius: 10px;
+    box-shadow: 10px 10px 40px gray;
+}
+#web-dev-experience{
+    border-left: 7px solid;
+    border-image: linear-gradient(blue,cyan);
+    border-image-slice: 1;
+
+}
+#full-stack-experiance{
+    border-left: 7px solid;
+    border-image: linear-gradient(salmon,purple);
+    border-image-slice: 1;
+}
+
+footer p{
+    text-align: center;
 }
